@@ -7,19 +7,15 @@
 
 module Command.Move where
 
-import Control.Monad.State (liftIO)
-
 import Command
 import qualified Command.Drop
 import qualified Annex
-import qualified AnnexQueue
 import LocationLog
 import Types
 import Content
 import qualified Remote
 import UUID
 import Messages
-import Utility
 
 command :: [Command]
 command = [repoCommand "move" paramPath seek
@@ -57,10 +53,8 @@ showAction False file = showStart "copy" file
  - for bare repos. -}
 remoteHasKey :: Remote.Remote Annex -> Key -> Bool -> Annex ()
 remoteHasKey remote key present	= do
-	g <- Annex.gitRepo
 	let remoteuuid = Remote.uuid remote
-	logfile <- liftIO $ logChange g key remoteuuid status
-	AnnexQueue.add "add" [Param "--"] logfile
+	logStatusFor remoteuuid key status
 	where
 		status = if present then ValuePresent else ValueMissing
 
