@@ -4,6 +4,8 @@ git-annex (0.20110421) UNRELEASED; urgency=low
   * Remove testpack from build depends, as it is not available
     on all architectures. The test suite will not be run if it
     cannot be compiled.
+  * Avoid using absolute paths when staging location log, as that can
+    confuse git when a remote's path contains a symlink. Closes: #621386
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Apr 2011 16:35:27 -0400
 
